# python-clean-architecture-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
conf/: alembic.ini  gunicorn.conf.py
src/app/application/abstractions/: interactor.py
src/app/application/protocols/: interactor.py
src/app/domain/common/: entities.py  exceptions.py  value_objects.py
src/app/infrastructure/: config.py
src/app/infrastructure/data_access/migrations/: env.py
src/app/infrastructure/data_access/migrations/versions/: e2d86bbbd20b_.py
src/app/infrastructure/data_access/models/: __init__.py  base.py
src/app/infrastructure/di/: main.py
src/app/infrastructure/di/providers/: adapters.py
src/app/main/: web_api.py
src/app/main/di/: main.py
src/app/main/di/providers/: adapters.py
src/app/presentation/web_api/: exc_handlers.py
src/app/presentation/web_api/routers/: __init__.py  health_check.py
tests/web_api/: conftest.py  test_health_router.py
tests/web_api/routers/: test_health_router.py
